Make sure there's always a vertical scrollbar to prevent reflow on dynamic page loads

--- a/src/public/less/main.less
+++ b/src/public/less/main.less
@@ -91,7 +91,7 @@ a {
   padding: 15px 40px;
   border-left: 1px solid #f0f0f0;
   border-right: 1px solid #f0f0f0;
-  min-height: 100%;
+  height: 100%;
 }
 
 .blogPost {
